# pranthora_voice_testing

./: .gitignore  API_DOCUMENTATION.md  CORRECTED_CURL_COMMANDS.md  OlympusEcho_Postman_Collection.json  README.md  audio_recorder.py  bridge.py  config.json  main.py  migration_add_columns_and_constraints.sql  migration_add_concurrent_calls_support.sql  migration_add_test_case_results_timestamps.sql  migration_remove_evaluation_criteria.sql  migration_rename_test_case_columns.sql  package.json  pyproject.toml  requirements.txt  static_memory_cache.py  test_api_commands.sh  test_fixes.py  test_logger.py  test_user_agent_changes.py  verify_migration.py
api/: __init__.py  app.py
api/routes/: __init__.py  twilio.py  websocket.py
api/v1/routes/: target_agents_routes.py  test_cases_routes.py  test_execution_routes.py  test_history_routes.py  test_suites_routes.py  test_suits_routes.py  twilio.py  twilio_test_routes.py  user_agents_routes.py  web_test_routes.py  websocket.py
backend/: pyproject.toml
call_bridges/: __init__.py  base.py
components/: theme-toggle.tsx
components/fixa/: TestRunnerControl.tsx
data_layer/: __init__.py  supabase_client.py
fixa/: api.py
fixa_api/: dummy_api.py  main.py
frontend/: components.json  debug_config.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  repro_config.json  temp_run_config.json
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/src/app/: globals.css
models/: __init__.py  api.py  bridge.py  test_suite_models.py
recorders/: conversation_recorder.py  twilio_recorder.py
scripts/: test_simultaneous_twilio_calls.py
services/: Environment changes - pranthora  __init__.py  audio_converter.py  database_service.py  pranthora_api_client.py  recording_storage_service.py  scaled_testing_service.py  target_agent_service.py  test_case_service.py  test_execution_service.py  test_history_service.py  test_suite_service.py  user_agent_service.py  web_scaled_testing_service.py
src/app/: layout.tsx
telemetrics/: logger.py  request_manager.py
tests/: test.py  test_webstream.py  twilio_concurrent_call_simulation.py
transports/: __init__.py  base.py  twilio.py  websocket.py
utils/: __init__.py  audio_utils.py  logger.py
(+104 files in other folders)
