[project]
name = "agent-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "gtts>=2.5.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pytest>=9.0.2",
    "twilio>=9.9.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
