[project]
name = "pranthora-voice-testing-platform"
version = "0.1.0"
description = "Voice Testing Platform for Agent-to-Agent Communication"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.34.3",
    "pydantic>=2.10.6",
    "websockets>=13.1",
    "asyncpg>=0.30.0",
    "rich>=13.7.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.5",
    "aiofiles>=0.10.0",
    "contextlib2>=21.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
