[project]
name = "agent-to-agent-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.14",
    "fixa-dev>=0.0.4",
    "loguru>=0.7.3",
    "ngrok>=1.4.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.34.3",
]
